{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 41,
  "lineage": "f37246a3-ff37-8d19-aabf-2e97bc90a32e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081f60b7f96399126",
            "arn": "arn:aws:ec2:us-east-1:778152356776:elastic-ip/eipalloc-081f60b7f96399126",
            "association_id": "eipassoc-0c92d05d6165f2361",
            "domain": "vpc",
            "id": "eipalloc-081f60b7f96399126",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0320423ce30babfce",
            "private_dns": "ip-10-0-0-223.ec2.internal",
            "private_ip": "10.0.0.223",
            "public_dns": "ec2-52-203-159-174.compute-1.amazonaws.com",
            "public_ip": "52.203.159.174",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-eip",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-eip",
              "Project": "my-terraform-project"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:internet-gateway/igw-0c98921835b39aa09",
            "id": "igw-0c98921835b39aa09",
            "owner_id": "778152356776",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081f60b7f96399126",
            "association_id": "eipassoc-0c92d05d6165f2361",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0922e87f12fc50c0c",
            "network_interface_id": "eni-0320423ce30babfce",
            "private_ip": "10.0.0.223",
            "public_ip": "52.203.159.174",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ddb75c4de4aa498f",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gw",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gw",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:route-table/rtb-0ab7d349fa907c943",
            "id": "rtb-0ab7d349fa907c943",
            "owner_id": "778152356776",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0922e87f12fc50c0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt",
              "Project": "my-terraform-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:route-table/rtb-0b31d2b6af2ebe3d4",
            "id": "rtb-0b31d2b6af2ebe3d4",
            "owner_id": "778152356776",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c98921835b39aa09",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt",
              "Project": "my-terraform-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f98ccba6db1c437",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab7d349fa907c943",
            "subnet_id": "subnet-05603b8d28b53a84f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ed30ccec547b5b8",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab7d349fa907c943",
            "subnet_id": "subnet-08b202b22d9d7e357"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044588944f22bcbc2",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab7d349fa907c943",
            "subnet_id": "subnet-01d9ffcba74740122"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022d610ca741c0d03",
            "region": "us-east-1",
            "route_table_id": "rtb-0b31d2b6af2ebe3d4",
            "subnet_id": "subnet-0ddb75c4de4aa498f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec6dfa49439ce345",
            "region": "us-east-1",
            "route_table_id": "rtb-0b31d2b6af2ebe3d4",
            "subnet_id": "subnet-0c69d6f2734e112cd"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f849ce690a88d3e8",
            "region": "us-east-1",
            "route_table_id": "rtb-0b31d2b6af2ebe3d4",
            "subnet_id": "subnet-04a48558afc775a08"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:subnet/subnet-05603b8d28b53a84f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05603b8d28b53a84f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778152356776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1a",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1a",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:subnet/subnet-08b202b22d9d7e357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b202b22d9d7e357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778152356776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1b",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1b",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:subnet/subnet-01d9ffcba74740122",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d9ffcba74740122",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778152356776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1c",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1c",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:subnet/subnet-0ddb75c4de4aa498f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddb75c4de4aa498f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778152356776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1a",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1a",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:subnet/subnet-0c69d6f2734e112cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c69d6f2734e112cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778152356776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1b",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1b",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:subnet/subnet-04a48558afc775a08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a48558afc775a08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778152356776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1c",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1c",
              "Project": "my-terraform-project"
            },
            "vpc_id": "vpc-0a5ec63cb7f2df3a6"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778152356776:vpc/vpc-0a5ec63cb7f2df3a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb21e5391b1594a0",
            "default_route_table_id": "rtb-02ae7e10eaac5276f",
            "default_security_group_id": "sg-068f5f918a056123d",
            "dhcp_options_id": "dopt-00bd49616f7f8a28a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5ec63cb7f2df3a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ae7e10eaac5276f",
            "owner_id": "778152356776",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "my-terraform-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "my-terraform-project"
            }
          }
        }
      ]
    }
  ]
}